--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "project",
+  "name": "rdknvk",
   "version": "0.1.0",
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-imagemin": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-less": "~0.9.0",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-autoprefixer": "~0.6.5",
-    "livereloadx": "~0.3.2"
+    "browser-sync": "^1.7.2",
+    "gulp": "^3.8.10",
+    "gulp-connect": "^2.2.0",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-minify-html": "^0.1.7",
+    "gulp-sass": "^1.1.0",
+    "gulp-sourcemaps": "^1.2.8"
   }
 }
