--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "babel-loader": "^5.1.2",
     "browser-sync": "^1.7.2",
     "css-loader": "^0.12.1",
-    "gulp": "^3.8.10",
+    "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
     "gulp-minify-css": "^0.3.11",
     "gulp-minify-html": "^0.1.7",
     "gulp-sass": "^1.1.0",
     "gulp-sourcemaps": "^1.2.8",
+    "gulp-stylus": "^2.2.0",
     "node-libs-browser": "^0.5.0",
     "react": "^0.13.3",
     "react-packery-mixin": "^0.1.9",
