--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-sass": "^1.1.0",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-stylus": "^2.2.0",
+    "gulp.spritesmith": "^6.2.1",
     "node-libs-browser": "^0.5.0",
     "react": "^0.13.3",
     "react-packery-mixin": "^0.1.9",
